--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- ローディング画面 -->
   <div id="loading" class="loading-overlay">
     <div class="spinner"></div>
-    <p>読み込み中...</p>
+    <p id="loading-text">読み込み中...</p>
   </div>
 
   <header class="app-header">
@@ -18,8 +19,8 @@
 
   <main id="app-main">
     <div id="menu-container" class="menu-grid">
-      <!-- メニューはJavaScriptで動的に生成されます -->
-      </div>
+      <!-- メニューアイテムは app.js によってここに挿入されます -->
+    </div>
   </main>
 
   <footer id="cart-footer" class="cart-footer">
@@ -42,6 +43,7 @@
           <img id="item-detail-img" src="" alt="商品画像" class="item-detail-img">
           <p id="item-detail-description">ここに商品の説明が入ります。</p>
           <div id="item-detail-options" class="item-options">
+            <!-- オプションは app.js によってここに挿入されます -->
           </div>
           <div class="quantity-selector">
               <span>数量:</span>
@@ -66,9 +68,9 @@
         <button id="close-cart-modal" class="close-button">&times;</button>
       </div>
       <div id="cart-items-container" class="cart-items-container">
+        <!-- カートアイテムは app.js によってここに挿入されます -->
       </div>
-      
-      <!-- ★追加: 配達オプションコンテナ -->
+
       <div class="order-options-container">
         <h3>お受け取り方法</h3>
         <div class="option-group">
@@ -90,7 +92,7 @@
               <input type="text" id="delivery-address" placeholder="住所を入力してください">
               <button id="get-location-button" class="quantity-btn" title="現在地から入力">📍</button>
             </div>
-            <small>「📍」ボタンで現在地から入力できます。</small>
+            <small>「📍」ボタンで現在地から入力できます。<br>※ 配達エリア外の場合、ご注文をキャンセルさせていただく場合がございます。</small>
           </div>
           <div class="form-group">
             <label for="delivery-time">配達希望時間:</label>
